<resources>
    <string name="app_name">Lightning Note</string>

    <!-- App Tour Strings -->
    <string name="btn_skip">Skip</string>

    <string name="page_one_title">Presenting Lightning Note!</string>
    <string name="page_one_summary">A Lightweight Solution for your note making pleasure</string>

    <string name="page_two_title">Note with Ease and Style</string>
    <string name="page_two_summary">No more hunting through your app drawer!
        Just shake your phone twice to open the app, or use our floating helper window</string>

    <string name="page_three_title">Notes are not just Vanilla Text anymore</string>
    <string name="page_three_summary">Annotate your notes with Images, Audio, Videos and More!</string>

    <!-- Drawer Toggle Strings -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Main NavBar Menu Strings -->
    <string name="notes">Notes</string>
    <string name="reminders">Reminders</string>
    <string name="starred_notes">Starred Notes</string>
    <string name="tags">Tags</string>
    <string name="trash">Trash</string>
    <string name="settings">Settings</string>

    <!-- SharedPreferences Categories -->
    <string name="theme_appearance">Themes and Appearance</string>
    <string name="about">About</string>
    <string name="general_functionality">General Functions</string>

    <!-- SharedPreferences Keys -->
    <string name="key_theme">selectTheme</string>
    <string name="key_about_app">aboutApp</string>
    <string name="key_clear_history">clearHistory</string>
    <string name="key_multi_selection">multiSelection</string>
    <string name="key_shake_to_note">shakeToNote</string>
    <string name="key_floating_widget">floatingWidget</string>
    <string name="key_app_tour">appTour</string>

    <!-- SharedPreferences Names and Summaries -->
    <string name="theme">Theme</string>
    <string name="theme_summary">Change the Theme of the App</string>
    <string name="about_app">About App</string>
    <string name="clear_history">Clear History</string>
    <string name="multi_selection">Multi-Selection Mode</string>
    <string name="multi_selection_summary_off">Only a Single note can be selected at a time</string>
    <string name="multi_selection_summary_on">Multiple Notes may be selected at a time</string>
    <string name="shake_to_note">Shake To Note Service</string>
    <string name="shake_to_note_summary">Shake Device Twice to Add a Note</string>
    <string name="floating_widget">Create Floating Note Helper</string>
    <string name="floating_widget_summary">Creates a Floating Widget to Aid Note Addition</string>
    <string name="app_tour_re_watch">Re-Watch App Tour</string>

    <!-- Strings for Implementing Dynamic Theme in App -->
    <string name="theme_default">Default</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_red">Red</string>
    <string name="theme_teal">Teal</string>
    <string name="theme_green">Green</string>
    <string name="theme_blue">Blue</string>
    <string name="theme_purple">Purple</string>

    <string-array name="theme_entries">
        <item>@string/theme_default</item>
        <item>@string/theme_dark</item>
        <item>@string/theme_red</item>
        <item>@string/theme_teal</item>
        <item>@string/theme_green</item>
        <item>@string/theme_blue</item>
        <item>@string/theme_purple</item>
    </string-array>

    <!-- Add Note Strings -->
    <string name="add_reminder">Add Reminder</string>
    <string name="note_title">Note Title</string>
    <string name="note_body">Content</string>

    <!-- Note Menu Strings -->
    <string name="note_copy">Copy Text to Clipboard</string>
    <string name="note_copy_condensed">Copy Text</string>
    <string name="note_share">Share</string>
    <string name="note_delete">Delete</string>
    <string name="text_copied">Text Copied to Clipboard</string>
    <string name="note_restore">Restore</string>

    <!-- Notes List Strings -->
    <string name="search">Search</string>
    <string name="sort_list">Sort List By</string>
    <string name="sort_updated">Last Updated</string>
    <string name="sort_newest">Newest</string>
    <string name="sort_oldest">Oldest</string>
    <!-- List Style Strings -->
    <string name="more_options">More Options</string>
    <string name="list_style">See as A List</string>
    <string name="grid_style">See as A Grid</string>

    <!-- Miscellaneous Strings -->
    <string name="list_empty">No Content Here</string>
    <string name="notification_content">Shake Twice to Add a Note</string>
    <string name="save">Save Note</string>
    <string name="save_select">Save as LightningNote</string>
    <string name="remove">Remove</string>

    <!-- Dialog Strings -->
    <string name="enter_message">Write a Message for Reminder</string>
    <string name="priority">Should have High Priority</string>
    <string name="dismiss">Dismiss</string>
    <string name="recording">Recording Audio</string>
    <string name="counter">%1$d%2$d:%3$d%4$d</string>

    <!-- Reminder Strings -->
    <string name="time">%1$d:%2$d</string>
    <string name="date">%1$d/%2$d/%3$d</string>
    <string name="am">am</string>
    <string name="pm">pm</string>

    <!-- Search Strings -->
    <string name="search_hint">Search For</string>

    <!-- About App String -->
    <string name="version_placeholder">Version: %1$s</string>
    <string name="app_description">Make and Share Lightning Fast Notes. Just shake twice to add a note</string>
    <string name="open_source">Open Source Licenses</string>
    <string name="assets">Image Assets Used</string>
    <string name="privacy">Privacy Policy</string>

    <!-- Image Assets Used -->
    <string name="asset_name">Rack, Server, Lightning Icon</string>
    <string name="asset_license">License:  CC Attribution 3.0 UnPorted</string>
    <string name="asset_modified">Modified from Original</string>
    <string name="content_desc_asset">Rack, Server and Lightning Icon used as App Icon after Modification</string>

    <!-- Links -->
    <string name="asset_link">https://icon-icons.com/icon/rack-server-lightning/52828</string>
    <string name="policy_link">https://www.freeprivacypolicy.com/privacy/view/fac0d31948ed488fcd947f108f33f7ee</string>
    <string name="github_link">https://github.com/nihitb06/LightningNote</string>
</resources>
