<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Themes and Appearance -->
    <PreferenceCategory android:title="@string/theme_appearance">

        <!-- Theme -->
        <ListPreference
            android:key="@string/key_theme"
            android:title="@string/theme"
            android:summary="@string/theme_summary"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_entries"
            android:defaultValue="@string/theme_default" />

    </PreferenceCategory>

    <!-- About -->
    <PreferenceCategory android:title="@string/about">

        <!-- About App -->
        <Preference
            android:key="@string/key_about_app"
            android:title="@string/about_app" />

    </PreferenceCategory>

</PreferenceScreen>