<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/messageView"
        android:labelFor="@+id/etReminderMessage"
        android:padding="@dimen/padding_margin_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etReminderMessage"
            android:hint="@string/enter_message"
            android:textSize="@dimen/size_text_default"
            android:paddingBottom="@dimen/padding_margin_small"
            android:minEms="12"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <View
        android:id="@+id/divider"
        android:layout_marginStart="@dimen/padding_margin_default"
        android:layout_marginEnd="@dimen/padding_margin_default"
        android:layout_marginLeft="@dimen/padding_margin_default"
        android:layout_marginRight="@dimen/padding_margin_default"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/messageView" />

    <TextView
        android:id="@+id/tvPriority"
        android:text="@string/priority"
        android:textSize="@dimen/size_text_default"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_margin_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <Switch
        android:id="@+id/prioritySwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tvPriority"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintBottom_toBottomOf="@id/tvPriority" />

    <Button
        android:id="@+id/btnDismissDialog"
        android:text="@string/dismiss"
        android:textColor="@color/colorRedPrimary"
        android:layout_marginTop="@dimen/padding_margin_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvPriority"
        app:layout_constraintEnd_toStartOf="@id/btnAddReminder"
        style="?android:attr/borderlessButtonStyle" />

    <Button
        android:id="@+id/btnAddReminder"
        android:text="@string/add_reminder"
        android:textColor="?colorAccent"
        android:layout_margin="@dimen/padding_margin_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvPriority"
        app:layout_constraintEnd_toEndOf="parent"
        style="?android:attr/borderlessButtonStyle" />

</android.support.constraint.ConstraintLayout>