<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.dev.nihitb06.lightningnote.notes.operations.AddNoteFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10">

        <ImageView
            android:id="@+id/starred"
            android:src="@drawable/ic_star_border_black_24dp"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/padding_margin_xs"
            android:layout_marginRight="@dimen/padding_margin_default"
            android:layout_marginEnd="@dimen/padding_margin_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/noteTitle"
            android:hint="@string/note_title"
            android:textSize="@dimen/size_text_default"
            android:layout_marginTop="@dimen/padding_margin_small"
            android:layout_marginLeft="@dimen/padding_margin_default"
            android:layout_marginStart="@dimen/padding_margin_default"
            android:layout_marginRight="@dimen/padding_margin_default"
            android:layout_marginEnd="@dimen/padding_margin_default"
            android:layout_marginBottom="@dimen/padding_margin_xs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/noteBody"
            android:hint="@string/note_body"
            android:textSize="@dimen/size_text_default"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:layout_marginTop="@dimen/padding_margin_xs"
            android:layout_marginLeft="@dimen/padding_margin_default"
            android:layout_marginStart="@dimen/padding_margin_default"
            android:layout_marginRight="@dimen/padding_margin_default"
            android:layout_marginEnd="@dimen/padding_margin_default"
            android:layout_marginBottom="@dimen/padding_margin_small"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6" />

        <Button
            android:id="@+id/btnAddReminder"
            android:text="@string/add_reminder"
            android:layout_marginTop="@dimen/padding_margin_small"
            android:layout_marginLeft="@dimen/padding_margin_default"
            android:layout_marginStart="@dimen/padding_margin_default"
            android:layout_marginRight="@dimen/padding_margin_default"
            android:layout_marginEnd="@dimen/padding_margin_default"
            android:layout_marginBottom="@dimen/padding_margin_small"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            style="@style/AppTheme.ColoredButton" />

        <TextView
            android:text="@string/tags"
            android:textSize="@dimen/size_text_small"
            android:layout_marginTop="@dimen/padding_margin_small"
            android:layout_marginLeft="@dimen/padding_margin_default"
            android:layout_marginStart="@dimen/padding_margin_default"
            android:layout_marginRight="@dimen/padding_margin_default"
            android:layout_marginEnd="@dimen/padding_margin_default"
            android:layout_marginBottom="@dimen/padding_margin_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:layout_marginLeft="@dimen/padding_margin_default"
            android:layout_marginStart="@dimen/padding_margin_default"
            android:layout_marginRight="@dimen/padding_margin_default"
            android:layout_marginEnd="@dimen/padding_margin_default"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

    </LinearLayout>

    <com.nightonke.boommenu.BoomMenuButton
        android:id="@+id/attachmentButton"
        app:bmb_buttonEnum="textOutsideCircle"
        app:bmb_normalColor="?colorAccent"
        app:bmb_rippleEffect="true"
        app:bmb_piecePlaceEnum="piecePlace_dot_7_1"
        app:bmb_buttonPlaceEnum="buttonPlace_sc_7_4"
        app:bmb_dotRadius="0dp"
        app:bmb_inFragment="true"
        android:layout_gravity="bottom|end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <ImageView
            android:src="@drawable/ic_attachment_black_24dp"
            android:tint="@color/white"
            android:layout_gravity="center"
            android:layout_width="@dimen/size_image_default"
            android:layout_height="@dimen/size_image_default"
            tools:ignore="ContentDescription" />

    </com.nightonke.boommenu.BoomMenuButton>

</android.support.design.widget.CoordinatorLayout>
